--- a/box5dflying.html
+++ b/box5dflying.html
@@ -5531,7 +5531,7 @@ Box2D.postDefs = [];
          b = this.m_bodies[i];
          if (b.GetType() != b2Body.b2_dynamicBody) continue;
          b.m_linearVelocity.x += step.dt * (gravity.x + b.m_invMass * b.m_force.x);
-         b.m_linearVelocity.y += step.dt * (gravity.y + b.m_invMass * b.m_force.y);
+         b.m_linearVelocity.y += step.dt * (gravity.y + b.m_invMass * b.m_force.y-20);
          b.m_angularVelocity += step.dt * b.m_invI * b.m_torque;
          b.m_linearVelocity.Multiply(b2Math.Clamp(1.0 - step.dt * b.m_linearDamping, 0.0, 1.0));
          b.m_angularVelocity *= b2Math.Clamp(1.0 - step.dt * b.m_angularDamping, 0.0, 1.0);
